New features implemented in the interface
